--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
 .App {
   text-align: center;
 }
+.btn-brand{
+  background-image: linear-gradient(75deg, #19D3AE,#0fcfec);
+  border-color: transparent;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.text-brand{
+  color: #1cc7c1;
+}
 
 .App-logo {
   height: 40vmin;
