--- a/src/components/Dashboard/SIdebar/Sidebar.css
+++ b/src/components/Dashboard/SIdebar/Sidebar.css
@@ -1,6 +1,7 @@
 .sidebar{
     background-image: linear-gradient(40deg, #19d3ae,#0fcfec);
     position: fixed;
+    z-index: 1;
 }
 .sidebar li{
     margin-bottom: 2em;
